--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </header>
     <div id="homepg" class="home">
         <div class="tag">
-            <p class="tagline text-light text-center fs-3 fw-bolder">Savor the Moment, Taste the Perfection!</p>
+            <p id="p1" class="tagline text-warning text-center  fw-bolder">Savor the Moment, Taste the Perfection!</p>
         </div>
 
     </div>
